# RichClub

./: .gitignore  MODEL_GUIDE.md  README.md  docker-compose.yml  package-lock.json  price_filtered_2021.csv
catboost_info/: catboost_training.json  learn_error.tsv  (+1 more)
web_server/: .dockerignore  Dockerfile  Jenkinsfile  pyproject.toml  requirements.txt
web_server/app/: main.py
web_server/app/api/: router.py
web_server/app/api/v1/: auth.py  market.py  mlops.py  models.py  news.py  stock.py  subscription.py  trade_log.py  watchlist.py
web_server/app/core/: config.py  dependencies.py  security.py
web_server/app/db/: mongo.py
web_server/app/ml/: drift_detector.py  predictor.py  retrain_pipeline.py  seo_predictor.py  trainer.py  upload_signals.py
web_server/app/models/seo-model-v1/: lgb_regressor.pkl  model_features.pkl  target_label_map.pkl  xgb_regressor.pkl
web_server/app/models/seo-model-v2/python/: data_combine.py  datatest.py  feature_rev1.py  simulation_rev1.py  train_rev1.py
web_server/app/models/seo-model-v2/test_result/: trading_simulation_lgb_classifier_result_2026.csv  trading_simulation_lgb_regressor_result_2026.csv  trading_simulation_xgb_classifier_result_2026.csv  trading_simulation_xgb_regressor_result_2026.csv
web_server/app/models/seo-model-v2/train_pklFile/: lgb_regressor.pkl  model_features.pkl  xgb_regressor.pkl
web_server/app/scheduler/: candle_collector.py  daily_collector.py  jobs.py
web_server/app/schemas/: auth.py  stock.py
web_server/app/services/: email_service.py  user_service.py
web_server/app/utils/: telegram.py
(+326 files in other folders)
